--- a/common_style.css
+++ b/common_style.css
@@ -1,8 +1,49 @@
 .flex-container {
     display: flex;
-    background: lightgray;
+    background: gray;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding: 10px;
+    padding-left: 10px;
+}
+
+.photo-container {
+    display: flex;
+    background: lightgray;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 30px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: center;
+    font-family: "Gill Sans", sans-serif;
+
+}
+.photo-container div {
+    display: flex;
+    justify-content: flex-start;
+}
+#photoheader {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+#seniorphoto {
+    float: left;
+    display: flex;
+    width: 150px;
+    height: 150px;
+    border: 3px solid black;
+    border-radius: 50%;
+    transform: scale(1.0);
+    transition: transform 0.5s;
+    margin-right: 20px;
+}
+#seniorphoto:hover {
+    transform: scale(1.1);
+    transition: transform 0.5s;
 }
 .flex-item {
     display: flex;
@@ -42,6 +83,8 @@ nav {
     background: #333;
     justify-content: space-between;
     align-items: center;
+    font-family: "Gill Sans", sans-serif;
+
 }
 nav .logo {
     margin: 20px;
