--- a/common_style.css
+++ b/common_style.css
@@ -124,4 +124,15 @@ nav a {
     nav li {
         padding-right: 150px;
     }
+    .container {
+        flex-direction: column;
+    }
+    nav, .sidebar {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: 20vw;
+    }
+    .sidebar {
+        flex-shrink: 1;
+    }
 }
