Added border radius to all navs

--- a/common_style.css
+++ b/common_style.css
@@ -90,6 +90,7 @@ html {
 
 nav {
     display: flex;
+    border-radius: 10px;
     color: white;
     background: #000;
     justify-content: space-between;
